--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
             display: flex;
         }
 
+        #sound-prop {
+            position: fixed;
+            color: white;
+            z-index: 100;
+        }
+
         body {
         width: 100%;
         height: 100%;
@@ -74,6 +80,7 @@
 </head>
 
 <body>
+    <div id="sound-prop">Click anywhere to play music</div>
     <div class="fade"></div>
     <section class="star-wars">
         <div class="crawl">
@@ -88,4 +95,18 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     <script src="leaderboards.js"></script>
+    <script>
+        (function onReady(){
+            let played = false;
+            const playMusic = () => {
+                if(!played){
+                    const music = new Audio('music.mp3');
+                    music.play();
+                    played = true;
+                    document.getElementById('sound-prop').style.display = 'none';
+                }
+            }
+            document.body.addEventListener('click', playMusic)
+        })();
+    </script>
 </html>
